@@ -26,6 +26,9 @@
     and TIMESTAMP with an underscore to reduce likelihood of
     collisions with source files on case-insensitive file systems
     like on MacOS (#1753, reported by Kon Lovett).
+  - chicken-install: Fix #1684 (programs that specify
+    component-dependencies should build-depend on their import
+    libraries).
 
 - Compiler
   - When emitting types files, the output list is now sorted, to ensure
